--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -169,6 +169,8 @@
     <script type='text/javascript' src='{% static "build/GraphNodeConnection.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphOnGlobe.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphButton.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditButtonArea.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditButton.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/HistoGlobe.js" %}'></script>
 
