styled and positioned operation buttons

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -171,6 +171,7 @@
     <script type='text/javascript' src='{% static "build/GraphButton.js" %}'></script>
     <script type='text/javascript' src='{% static "build/EditButtonArea.js" %}'></script>
     <script type='text/javascript' src='{% static "build/EditButton.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/OperationButtons.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/HistoGlobe.js" %}'></script>
 
