nicely rewritten control buttons and edit buttons, both inherited from button area class

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -127,13 +127,18 @@
     <script type='text/javascript' src='{% static "build/SearchBoxArea.js" %}'></script>
     <script type='text/javascript' src='{% static "build/SearchBoxForm.js" %}'></script>
     <script type='text/javascript' src='{% static "build/HiventList.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/ControlButtonArea.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Help.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Imprint.js" %}'></script>
+
+    <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ControlButtons.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ZoomButtons.js" %}'></script>
     <script type='text/javascript' src='{% static "build/FullscreenButton.js" %}'></script>
     <script type='text/javascript' src='{% static "build/HighContrastButton.js" %}'></script>
     <script type='text/javascript' src='{% static "build/MinLayoutButton.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditButton.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/OperationButtons.js" %}'></script>
+
+    <script type='text/javascript' src='{% static "build/Help.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Imprint.js" %}'></script>
     <script type='text/javascript' src='{% static "build/HiventPresenter.js" %}'></script>
     <script type='text/javascript' src='{% static "build/HiventsOnMap.js" %}'></script>
     <script type='text/javascript' src='{% static "build/HiventsOnGlobe.js" %}'></script>
@@ -169,9 +174,6 @@
     <script type='text/javascript' src='{% static "build/GraphNodeConnection.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphOnGlobe.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphButton.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/EditButtonArea.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/EditButton.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/OperationButtons.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/HistoGlobe.js" %}'></script>
 
