finished buttons and operations controller, now starting design of operations window

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -137,6 +137,9 @@
     <script type='text/javascript' src='{% static "build/EditButton.js" %}'></script>
     <script type='text/javascript' src='{% static "build/OperationButtons.js" %}'></script>
 
+    <script type='text/javascript' src='{% static "build/EditOperationWindow.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditOperationController.js" %}'></script>
+
     <script type='text/javascript' src='{% static "build/Help.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Imprint.js" %}'></script>
     <script type='text/javascript' src='{% static "build/HiventPresenter.js" %}'></script>
