created generic button class, started implementing work flow in operations, now visualization

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -129,6 +129,7 @@
     <script type='text/javascript' src='{% static "build/HiventList.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ControlButtons.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ZoomButtons.js" %}'></script>
     <script type='text/javascript' src='{% static "build/FullscreenButton.js" %}'></script>
