--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -7,7 +7,7 @@
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no' />
 
-    <link rel='shortcut icon' href='data/icons/favicon.ico' type='image/x-icon' />
+    <link rel='shortcut icon' href='{% static "config/common/graphics/favicon.ico" %}' type='image/x-icon' />
 
     <title>HistoGlobe</title>
 
