renamed ObjArr to ObjectArray

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -86,7 +86,7 @@
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Vector.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/ObjArr.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Popover.js" %}'></script>
     <script type='text/javascript' src='{% static "build/MultimediaController.js" %}'></script>
