implemented abort button and integrated into workflow, deactivate operation buttons in operation

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -132,7 +132,7 @@
     <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ControlButtons.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/OperationButtons.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditOperationButtons.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/EditOperationWindow.js" %}'></script>
     <script type='text/javascript' src='{% static "build/EditOperationController.js" %}'></script>
