--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -132,10 +132,11 @@
     <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ControlButtons.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/EditOperationButtons.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ChangeOperationButtons.js" %}'></script>
 
-    <script type='text/javascript' src='{% static "build/EditOperationWindow.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/EditOperationController.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ChangeOperationWorkflow.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ChangeController.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Help.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Imprint.js" %}'></script>
