cleaned up timeline

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -168,7 +168,11 @@
     <script type='text/javascript' src='{% static "build/WidgetController.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Timeline.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NowMarker.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ZoomButtonsTimeline.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/HistoGraph.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Topic.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/TopicController.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Watermark.js" %}'></script>
 
