--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -179,6 +179,7 @@
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Div.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Gallery.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
