created several dom elements to easily use inside HG

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -175,11 +175,17 @@
     <script type='text/javascript' src='{% static "build/TopicController.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Watermark.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
+
+    <script type='text/javascript' src='{% static "build/DOMElement.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Div.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Span.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Img.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Div.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Gallery.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
