--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -183,6 +183,7 @@
     <script type='text/javascript' src='{% static "build/Img.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Svg.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
