styled and designed around, now actually coding functionality

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -111,8 +111,9 @@
     <script type='text/javascript' src='{% static "build/CrowdMarker2D.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CrowdsOnMap.js" %}'></script>
 
-    <script type='text/javascript' src='{% static "build/ChangeOperationWorkflow.js" %}'></script>
     <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditButtons.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ChangeOperationWindow.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/GraphController.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphNode.js" %}'></script>
