implemented structure of territory tools - took ages because of css positioning

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -114,6 +114,7 @@
     <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
     <script type='text/javascript' src='{% static "build/EditButtons.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ChangeOperationWindow.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/TerritoryTools.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/GraphController.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphNode.js" %}'></script>
@@ -185,6 +186,7 @@
     <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Svg.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Checkbox.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
