--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -187,6 +187,7 @@
     <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Svg.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Checkbox.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NumberInput.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
