styled change operation window and territory tools, reorganised buttons

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -188,6 +188,7 @@
     <script type='text/javascript' src='{% static "build/Svg.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Checkbox.js" %}'></script>
     <script type='text/javascript' src='{% static "build/NumberInput.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Switch.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
