finished workflow window with workflow bar and circles, highlightling current step, restructured edit mode

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -13,9 +13,13 @@
 
     <!-- STYLESHEET -->
 
-    <!-- third party styles-->
+    <!-- fonts-->
 
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Roboto:500,400italic,700italic,300,700,500italic,300italic,400' />
+    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Montserrat:400,700' />
+    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' />
+
+    <!-- third party styles-->
 
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/bootstrap.min.css" %}' />
     <link rel='stylesheet' type='text/css' href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
@@ -26,12 +30,10 @@
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/MarkerCluster.Default.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/leaflet.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/leaflet.label.css" %}' />
+    <link rel='stylesheet' type='text/css' href='{% static "style/third-party/leaflet.draw.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/jplayer/blue.monday/jplayer.blue.monday.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/jquery.jscrollpane.css" %}' />
     <link rel='stylesheet' type='text/css' href='{% static "style/third-party/select2.css" %}' />
-
-    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Montserrat:400,700' />
-    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' />
 
     <!--[if lte IE 8]>hivent
       <link rel='stylesheet' href='{% static "style/third-party/leaflet.ie.css" %}' />
@@ -67,6 +69,7 @@
     <script type='text/javascript' src='{% static "build/leaflet.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.label.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.markercluster.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/leaflet.draw.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/bootstrap.min.js" %}'></script>
 
