--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -47,8 +47,7 @@
 
     <!-- SCRIPTS -->
 
-    <!-- third party scripts -->
-
+    <!-- third-party -->
     <script type='text/javascript' src='{% static "build/d3.v3.min.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/jquery-1.9.0.min.js" %}'></script>
@@ -81,13 +80,33 @@
     <script type='text/javascript' src='{% static "build/select2.min.js" %}'></script>
 
 
-    <!-- own scripts -->
+    <!-- utils -->
+    <script type='text/javascript' src='{% static "build/DOMElement.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Div.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Span.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Img.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NumberInput.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Switch.js" %}'></script>
+
+    <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Gallery.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/StateVar.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Vector.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/VideoPlayer.js" %}'></script>
+
+    <!-- display -->
     <script type='text/javascript' src='{% static "build/Display.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Display2D.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Globe.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Popover.js" %}'></script>
 
+    <!-- modules -->
     <script type='text/javascript' src='{% static "build/Area.js" %}'></script>
     <script type='text/javascript' src='{% static "build/AreaController.js" %}'></script>
     <script type='text/javascript' src='{% static "build/AreaLabel.js" %}'></script>
@@ -182,28 +201,12 @@
     <script type='text/javascript' src='{% static "build/Watermark.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
 
-    <script type='text/javascript' src='{% static "build/DOMElement.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Div.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Span.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Img.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/NumberInput.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Switch.js" %}'></script>
-
-    <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Gallery.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/StateVar.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/Vector.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/VideoPlayer.js" %}'></script>
-
+    <!-- main -->
     <script type='text/javascript' src='{% static "build/default_config.js" %}'></script>
     <script type='text/javascript' src='{% static "build/config.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/HistoGlobe.js" %}'></script>
+
 
     <!-- INIT HISTOGLOBE -->
 
