restructured edit mode again - now everything works like last night, it is just more scalable and I hopefully do not have to redo the whole thing once more

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -134,8 +134,7 @@
     <script type='text/javascript' src='{% static "build/CrowdsOnMap.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/EditButtons.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/ChangeOperationWindow.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/WorkflowWindow.js" %}'></script>
     <script type='text/javascript' src='{% static "build/TerritoryTools.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/GraphController.js" %}'></script>
