started working on new country label -> it is hard

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -88,6 +88,7 @@
     <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
     <script type='text/javascript' src='{% static "build/NumberInput.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/TextInput.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Switch.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
@@ -136,6 +137,7 @@
     <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
     <script type='text/javascript' src='{% static "build/WorkflowWindow.js" %}'></script>
     <script type='text/javascript' src='{% static "build/TerritoryTools.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NewCountryLabel.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/GraphController.js" %}'></script>
     <script type='text/javascript' src='{% static "build/GraphNode.js" %}'></script>
