shift: use embedded leaflet draw controls and style them instead of using own control

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -120,7 +120,7 @@
 
     <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
     <script type='text/javascript' src='{% static "build/WorkflowWindow.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/TerritoryTools.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NewCountryTerritory.js" %}'></script>
     <script type='text/javascript' src='{% static "build/NewCountryLabel.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
