hacked elegantly existing buttons into HG.Buttons and defined onhover for buttons to see if they are active

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -82,6 +82,7 @@
     <script type='text/javascript' src='{% static "build/DOMElement.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Div.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Span.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Svg.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Img.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Icon.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Anchor.js" %}'></script>
@@ -123,8 +124,8 @@
     <script type='text/javascript' src='{% static "build/NewCountryTerritory.js" %}'></script>
     <script type='text/javascript' src='{% static "build/NewCountryLabel.js" %}'></script>
 
-    <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Title.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/Help.js" %}'></script>
