again and again get EditMode to work with a new logic, now just get it through this time without redesigning!

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -121,8 +121,8 @@
 
     <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
     <script type='text/javascript' src='{% static "build/WorkflowWindow.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/NewCountryTerritory.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/NewCountryLabel.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NewGeometryTool.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/NewNameTool.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
