jquery update, first try with greiner-hormann, but it seems not to be suitable for adjacent polygons

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -49,7 +49,7 @@
     <!-- third-party -->
     <script type='text/javascript' src='{% static "build/d3.v3.min.js" %}'></script>
 
-    <script type='text/javascript' src='{% static "build/jquery-1.9.0.min.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/jquery-2.2.0.js" %}'></script>
     <script type='text/javascript' src='{% static "build/jquery.browser.js" %}'></script>
     <script type='text/javascript' src='{% static "build/jquery.disable.text.select.js" %}'></script>
     <script type='text/javascript' src='{% static "build/jquery.mousewheel.js" %}'></script>
@@ -69,6 +69,8 @@
     <script type='text/javascript' src='{% static "build/leaflet.label.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.markercluster.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.draw.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/greiner-hormann.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/greiner-hormann.leaflet.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/three.min.js" %}'></script>
     <script type='text/javascript' src='{% static "build/TessellateModifier.js" %}'></script>
