switched from Greiner-Hormann to jsts, works well, but transforming one data format to another is a PAIN IN THE FUCKING ASSgit add . --all! why are there so many different formats? Why can't those libraries have nice interfaces, aka give me all kinds of data that there is, I will take care about transforming it in the system that I need? It is horrible

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -66,11 +66,13 @@
     <script type='text/javascript' src='{% static "build/bootstrap.min.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/leaflet.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/leaflet-omnivore.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.label.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.markercluster.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.draw.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/greiner-hormann.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/greiner-hormann.leaflet.js" %}'></script>
+
+    <script type='text/javascript' src='{% static "build/javascript.util.min.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/jsts.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/three.min.js" %}'></script>
     <script type='text/javascript' src='{% static "build/TessellateModifier.js" %}'></script>
