FINALLY FINALLY FINALLY! FUCKING FUCKING FUCKING data conversions from one to another. It is such a pain in the ass and ruines my whole daygit add . --allgit add . --all

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -66,10 +66,12 @@
     <script type='text/javascript' src='{% static "build/bootstrap.min.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/leaflet.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/leaflet-omnivore.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.label.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.markercluster.js" %}'></script>
     <script type='text/javascript' src='{% static "build/leaflet.draw.js" %}'></script>
+
+    <script type='text/javascript' src='{% static "build/wicket.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/wicket-leaflet.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/javascript.util.min.js" %}'></script>
     <script type='text/javascript' src='{% static "build/jsts.js" %}'></script>
@@ -98,6 +100,7 @@
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/Geo.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
     <script type='text/javascript' src='{% static "build/StateVar.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Vector.js" %}'></script>
