styling geometry tool, transfer geometric operations to HG.GeoOperations

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -99,6 +99,7 @@
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/GeoOperator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
     <script type='text/javascript' src='{% static "build/StateVar.js" %}'></script>
