integrated geometry and withintree utilites

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -96,10 +96,20 @@
     <script type='text/javascript' src='{% static "build/TextInput.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Switch.js" %}'></script>
 
+    <script type="text/javascript" src='{% static "build/Geometry.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Polypolygon.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Polygon.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Polyline.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Point.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/GeometryReader.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/GeometryOperator.js" %}'></script>
+
+    <script type="text/javascript" src='{% static "build/WithinTree.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/WithinTreeNode.js" %}'></script>
+
     <script type='text/javascript' src='{% static "build/ABTest.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CSSCreator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/CallbackContainer.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/GeoOperator.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Mixin.js" %}'></script>
     <script type='text/javascript' src='{% static "build/ObjectArray.js" %}'></script>
     <script type='text/javascript' src='{% static "build/StateVar.js" %}'></script>
