--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -74,7 +74,7 @@
     <script type='text/javascript' src='{% static "build/wicket-leaflet.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/javascript.util.min.js" %}'></script>
-    <script type='text/javascript' src='{% static "build/jsts.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/jsts.min.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/three.min.js" %}'></script>
     <script type='text/javascript' src='{% static "build/TessellateModifier.js" %}'></script>
